Update code index page

--- a/StudentManagerment/app/templates/index.html
+++ b/StudentManagerment/app/templates/index.html
@@ -38,7 +38,7 @@
     </div>
 </nav>
 <img id="img_index_banner" class="img-fluid" src="{{ url_for('static', filename='images/banner.jpg') }}"
-     alt="banner_image">
+     alt="banner_image" style="height: 420px;">
 <div id="div_index_intro">
     <h4 id="text_intro">Giới thiệu</h4>
     <div id="content_intro">Hệ thống quản lý giáo dục thực hiện giáo dục mở, tạo bình đẳng cho mọi người trong
