--- a/StudentManagerment/app/templates/admin/home.html
+++ b/StudentManagerment/app/templates/admin/home.html
@@ -1,7 +1,5 @@
-{% extends 'layout/base.html' %}
-{% block title %}
-<title>Admin</title>
-{% endblock %}
-{% block content %}
-<h1>Login ok</h1>
+{% extends 'admin/master.html' %}
+{% block title %}E-SM - Trang chủ{% endblock %}
+{% block body %}
+<h1>Admin page</h1>
 {% endblock %}
