--- a/StudentManagerment/app/templates/index.html
+++ b/StudentManagerment/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %}
 {% block title %}
-<title>Index</title>
+<title>E-SM - Hệ thống quản lý giáo dục</title>
 {% endblock %}
 {% block css %}
 <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet">
@@ -12,10 +12,10 @@
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Giới thiệu</a>
+                    <a class="nav-link" href="#div_index_intro">Giới thiệu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Liên hệ</a>
+                    <a class="nav-link" href="#contact_container">Liên hệ</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Về chúng tôi</a>
@@ -30,15 +30,21 @@
                         <li><a class="dropdown-item" href="#">English (en)</a></li>
                     </ul>
                 </li>
+                {% if current_user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Đăng xuất</a>
+                </li>
+                {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Đăng nhập</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
     </div>
 </nav>
 <img id="img_index_banner" class="img-fluid" src="{{ url_for('static', filename='images/banner.jpg') }}"
-     alt="banner_image" style="height: 420px;">
+     alt="banner_image" style="height: 470px;">
 <div id="div_index_intro">
     <h4 id="text_intro">Giới thiệu</h4>
     <div id="content_intro">Hệ thống quản lý giáo dục thực hiện giáo dục mở, tạo bình đẳng cho mọi người trong
