--- a/StudentManagerment/app/templates/login.html
+++ b/StudentManagerment/app/templates/login.html
@@ -7,6 +7,12 @@
 <link href="{{ url_for('static', filename='css/login.css') }}" rel="stylesheet">
 {% endblock %}
 {% block content %}
+{% if error_message %}
+<div id="alert-login" class="alert alert-danger alert-dismissible show" role="alert">
+    {{ error_message }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endif %}
 <div id="login-container" class="row">
     <div class="col d-flex align-items-center justify-content-center" style="background-color: #ffffff;">
         <div>
