--- a/StudentManagerment/app/templates/login.html
+++ b/StudentManagerment/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'layout/base.html' %}
 {% block title %}
-<title>Đăng nhập</title>
+<title>E-SM - Đăng nhập</title>
 {% endblock %}
 {% block css %}
 <link href="{{ url_for('static', filename='css/base.css') }}" rel="stylesheet">
