--- a/StudentManagerment/app/templates/add_student_class.html
+++ b/StudentManagerment/app/templates/add_student_class.html
@@ -4,44 +4,12 @@
 
 {% block content%}
     <div class="container">
-        <h3 class="subject">Thêm học sinh vào lớp {{ lophoc.name }}</h3>
+        <h3 class="subject">Thêm học sinh vào lớp {{ class_room.name }}</h3>
         {% if err_msg %}
         <div class="alert alert-danger">
             <h3>{{ err_msg }}</h3>
         </div>
         {% endif %}
-<!--        <form class="form-inline" method="get" action="">-->
-<!--            <input class="form-control mr-sm-2" type="text" name="keyword" placeholder="Nhập từ khóa để tìm ...">-->
-<!--            <button type="submit" class="btn btn-success" >Tìm kiếm</button>-->
-<!--        </form>-->
-<!--        <table class="table table-striped">-->
-<!--            <thead class="subject">-->
-<!--                <tr>-->
-<!--                    <th></th>-->
-<!--                    <th>Mã học sinh</th>-->
-<!--                    <th>Họ và tên</th>-->
-<!--                    <th>Giới tính</th>-->
-<!--                    <th>Ngày sinh</th>-->
-<!--                </tr>-->
-<!--            </thead>-->
-<!--            <tbody>-->
-<!--                {% for s in dshs %}-->
-<!--                <tr>-->
-<!--                    <td>-->
-<!--                        <div class="form-check ">-->
-<!--                          <label class="form-check-label">-->
-<!--                            <input type="checkbox" class="form-check-input" value="">-->
-<!--                          </label>-->
-<!--                        </div>-->
-<!--                    </td>-->
-<!--                    <td style="text-align: center">{{ s.id }}</td>-->
-<!--                    <td>{{ s.hoten }}</td>-->
-<!--                    <td>{{ s.gioitinh }}</td>-->
-<!--                    <td>{{ s.ngaysinh }}</td>-->
-<!--                </tr>-->
-<!--                {% endfor %}-->
-<!--            </tbody>-->
-<!--        </table>-->
         <form method="post">
             <div class="form-group">
                 <label for="full_name">Họ và tên</label>
