--- a/StudentManagerment/app/templates/info_class.html
+++ b/StudentManagerment/app/templates/info_class.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="subject">
             <div class="row">
-                  <div class="col">Lớp: {{classroom.name}}</div>
+                  <div class="col">Lớp: {{class_room.name}}</div>
                   <div class="col">Sĩ số: {{quantity}}</div>
             </div>
             <div>
