--- a/StudentManagerment/app/templates/input_student.html
+++ b/StudentManagerment/app/templates/input_student.html
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label for="birthday">Năm sinh</label>
-                <input type="number" value="{{ student.birthday }}" placeholder="Nhập năm sinh" id="birthday" name="birthday" class="form-control" required>
+                <input type="date" value="{{ student.birthday }}" placeholder="Nhập năm sinh" id="birthday" name="birthday" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="phone">Số điện thoại</label>
