--- a/StudentManagerment/app/templates/admin/home.html
+++ b/StudentManagerment/app/templates/admin/home.html
@@ -1,5 +1,5 @@
 {% extends 'admin/master.html' %}
-{% block title %}E-SM - Trang chủ{% endblock %}
+<!--{% block title %}E-SM - Trang chủ{% endblock %}-->
 {% block body %}
 <h1>Admin page</h1>
 {% endblock %}
