--- a/StudentManagerment/app/templates/employee/index.html
+++ b/StudentManagerment/app/templates/employee/index.html
@@ -48,7 +48,7 @@
                          data-bs-parent="#accordion_flush_two">
                         <div class="accordion-body">
                             <ul class="list-group list-group-flush">
-                                <a href="#" class="list-group-item list-group-item-action">Danh sách lớp học</a>
+                                <a href="/employee/classes" class="list-group-item list-group-item-action">Danh sách lớp học</a>
                             </ul>
                         </div>
                     </div>
