--- a/StudentManagerment/app/static/css/base.css
+++ b/StudentManagerment/app/static/css/base.css
@@ -32,6 +32,7 @@ body{
     color: #ffffff;
     padding: 5px 20px;
     margin-top: 10px;
+    border-radius: 0px;
 }
 .my-button:hover{
     text-decoration: underline;
