--- a/StudentManagerment/app/templates/list_student.html
+++ b/StudentManagerment/app/templates/list_student.html
@@ -1,67 +1,62 @@
 {% extends 'layout/base.html' %}
 
-{% block title %}Quản lý học sinh{% endblock %}
+{% block title %}
+<title>Quản lý học sinh</title>
+{% endblock %}
 
 {% block content %}
-<div>
-
-    <div class="container">
-          <div class="row justify-content-between" style="margin: 15px">
-            <div class="col-4">
-                <a href="{{ url_for('input_student') }}">
-                    <button type="button" class="btn btn-primary">
-                        Tiếp nhận học sinh
-                    </button>
-                </a>
-            </div>
-            <div class="col-4">
-                <form class="form-inline" method="get" action="">
-                    <input class="form-control mr-sm-2" type="text" name="keyword" placeholder="Nhập từ khóa để tìm ...">
-                    <button type="submit" class="btn btn-success" >Tìm kiếm</button>
-                </form>
-            </div>
-          </div>
-        <h3 class="subject">Danh sách học sinh</h3>
-        <table class="table table-striped">
-            <thead class="subject">
-                <tr>
-                    <th>Mã học sinh</th>
-                    <th>Họ và tên</th>
-                    <th>Giới tính</th>
-                    <th>Ngày sinh</th>
-                    <th>Số điện thoại</th>
-                    <th>Email</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for s in student %}
-                <tr>
-                    <td style="text-align: center">{{ s.id }}</td>
-                    <td>{{ s.full_name }}</td>
-                    <td>{{ s.gender }}</td>
-                    <td>{{ s.birthday }}</td>
-                    <td>{{ s.phone }}</td>
-                    <td>{{ s.email }}</td>
-                    <td>
-                        <a href="{{ url_for('student_detail', student_id = s.id) }}"> Xem</a> <!--url_for('Tên phương thức', Tham số)-->
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
-        <ul class="pagination">
-            {% if pages > 1 %}
-              <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                {% for idx in range(1, pages+1) %}
-              <li class="page-item"><a class="page-link" href="{{ url_for('list_student', page=idx)}}">{{ idx }}</a></li>
-                {% endfor %}
-              <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            {% endif %}
-        </ul>
-
+<div class="row justify-content-between bg-danger" style="margin: 15px">
+    <div class="col-4">
+        <a href="/list_student/input_student">
+            <button type="button" class="btn btn-primary">
+                Tiếp nhận học sinh
+            </button>
+        </a>
+    </div>
+    <div class="col-4">
+        <form class="form-inline" method="get" action="">
+            <input class="form-control mr-sm-2" type="text" name="keyword" placeholder="Nhập từ khóa để tìm ...">
+            <button type="submit" class="btn btn-success">Tìm kiếm</button>
+        </form>
     </div>
 </div>
+<h3 class="subject">Danh sách học sinh</h3>
+<table class="table table-striped">
+    <thead class="subject">
+    <tr>
+        <th>Mã học sinh</th>
+        <th>Họ và tên</th>
+        <th>Giới tính</th>
+        <th>Ngày sinh</th>
+        <th>Số điện thoại</th>
+        <th>Email</th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for s in student %}
+    <tr>
+        <td>{{ s.id }}</td>
+        <td>{{ s.full_name }}</td>
+        <td>{{ s.gender }}</td>
+        <td>{{ s.birthday }}</td>
+        <td>{{ s.phone }}</td>
+        <td>{{ s.email }}</td>
+        <td>
+            <a href="/class_detail/{{ s.id }}"> Xem</a>
+        </td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
 
+<ul class="pagination">
+    {% if pages > 1 %}
+    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+    {% for idx in range(1, pages + 1) %}
+    <li class="page-item"><a class="page-link" href="{{ url_for('list_student', page=idx)}}">{{ idx }}</a></li>
+    {% endfor %}
+    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    {% endif %}
+</ul>
 {% endblock %}
